RESOLVED FIXED306705
REGRESSION(306568@main): Double-quoted include "FreeSpaceScenario.h" in framework header
https://bugs.webkit.org/show_bug.cgi?id=306705
Summary REGRESSION(306568@main): Double-quoted include "FreeSpaceScenario.h" in frame...
Jonathan Bedard
Reported 2026-01-31 10:08:52 PST
Double-quoted include "FreeSpaceScenario.h" in framework header, expected angle-bracketed instead
Attachments
Jonathan Bedard
Comment 1 2026-01-31 10:08:54 PST
Jonathan Bedard
Comment 2 2026-01-31 10:10:17 PST
EWS
Comment 3 2026-01-31 10:12:11 PST
Committed 306575@main (018237bdcc7c): <https://commits.webkit.org/306575@main> Reviewed commits have been landed. Closing PR #57638 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.