REGRESSION(306568@main): Double-quoted include "FreeSpaceScenario.h" in framework header https://bugs.webkit.org/show_bug.cgi?id=306705 rdar://169352250

Unreviewed build fix.

* Source/WebCore/layout/formattingContexts/grid/GridLayout.h:
* Source/WebCore/layout/formattingContexts/grid/TrackSizingAlgorithm.h:

Canonical link: https://commits.webkit.org/306575@main